dom/performance/PerformanceWorker.h
@@ -58,6 +58,10 @@ class PerformanceWorker final : public Performance {
     MOZ_CRASH("This should not be called on workers.");
   }
 
+  void UpdateNavigationTimingEntry() override {
+    MOZ_CRASH("This should not be called on workers.");
+  }
+
   bool CrossOriginIsolated() const override;
 
  protected:
